--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,14 @@
 <style type="text/css" media="all">
-html, body
-{
-	width: 100%;
-	height: 100%;
-	margin: 0;			/* Remove body margin/padding */
-	padding: 0;
-	overflow: hidden;	/* Remove scroll bars on browser window */
-}
-#header { padding: 1em; }
 
 #ScoreDistributionPane {
-	overflow: auto;
-}
-
-
-#LeftPaneSplitter1 {
-	min-width: 300px;
+	overflow-x: visible;
+	overflow-y: auto;
 }
 
 
 #canvas {
 	width: 100%;
 	height: 100%;
-}
-
-/* Splitbar styles; these are the default class names */
-
-.vsplitbar {
-	width: 6px;
-	background: #669;
-}
-.vsplitbar:hover, .vsplitbar.active {
-	background: #c66;
-	opacity: 0.7;
-	filter: alpha(opacity=70); /* IE */
-}
-.hsplitbar {
-	height: 6px;
-	background: #669;
-}
-.hsplitbar.active, .hsplitbar:hover {
-	background: #c66;
-	opacity: 0.7;
-	filter: alpha(opacity=70); /* IE */
 }
 
 </style>
