--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,14 @@ html, body
 	overflow-y: auto;
 }
 
-
 #canvas {
 	width: 100%;
 	height: 100%;
+}
+
+.content {
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 </style>
