--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,13 @@ div.titlebar
 	overflow-y: auto;
 }
 
+#show_help_link
+{
+	width: 110px;
+	text-align: right;
+	display: inline-block;
+}
+
 #canvas {
 	width: 100%;
 	height: 100%;
