--- a/styles.css
+++ b/styles.css
@@ -31,12 +31,18 @@ div#help
 	font-family: verdana, arial;
 	background-color: white;
 	padding: 5px;
+	padding-top: 0;
+	margin: 0;
+	overview: auto;
 }
 
 div#help h1, div#help h2, div#help h3
 {
 	font-weight: normal;
 	font-family: verdana, arial;
+	padding: 0;
+	margin: 5px;
+
 }
 
 
